--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -1,6 +1,6 @@
 body{
     font-weight: bolder;
-    font-family: "B Koodak";
+    font-family: "B Nazanin";
 }
 @import '@mdi/font/css/materialdesignicons.min.css';
 @font-face {
