update From MAS61MAS in 14021012

--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -7,4 +7,8 @@ body{
     font-family: 'Digital-7';
     src:url("fonts/Digital-7.ttf");
 }
+@font-face {
+    font-family: 'B Nazanin';
+    src:url("fonts/B-NAZANIN.TTF");
+}
 @import 'animate.css';
